# paintings

./: .gitmodules  CMakeLists.txt  README.md  analyze-hue.cpp  analyze-true.cpp  convert.cpp  create-sample.cpp
include/paintings/: analysis.h  colors.h  image.h  options.h  pool.h
src/: analysis.cpp  colors.cpp  image.cpp  main.cpp  options.cpp  pool.cpp
